
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int rbuf ;
typedef int fd_set ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int errno ;
 int exit (int ) ;
 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 int sock_recv (int,char*,int) ;
 int sock_send (int,char*,int) ;
 int stderr ;
 int stdout ;
 char* strerror (int ) ;

__attribute__((used)) static void
shellami (int fd)
{
  int n;
  fd_set rset;
  char rbuf[1024];

  while (1)
    {
      FD_ZERO (&rset);
      FD_SET (fd, &rset);
      FD_SET (STDIN_FILENO, &rset);

      if (select (fd + 1, &rset, ((void*)0), ((void*)0), ((void*)0)) < 0)
        {
          fprintf (stderr, "shellami: select() - %s\n", strerror (errno));
          exit (EXIT_FAILURE);
        }

      if (FD_ISSET (fd, &rset))
        {
          if ((n = sock_recv (fd, rbuf, sizeof (rbuf) - 1)) <= 0)
            {
              fprintf (stderr, "shellami: connection closed by foreign host.\n");
              exit (EXIT_SUCCESS);
            }
          rbuf[n] = '\0';
          printf ("%s", rbuf);
          fflush (stdout);
        }
      if (FD_ISSET (STDIN_FILENO, &rset))
        {
          if ((n = read (STDIN_FILENO, rbuf, sizeof (rbuf) - 1)) > 0)
            {
              rbuf[n] = '\0';
              sock_send (fd, rbuf, n);
            }
        }
    }
}
